# auto-coder

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMMON_PITFALLS.md  DIAGNOSTIC_REPORT_2026-03-20.md  INPUT_SPEC.md  README.md  ROADMAP.md  ROADMAP_V1.md  pyproject.toml
auto_coder/: __init__.py  bootstrap_brief.py  brief_validator.py  cli.py  config.py  executor.py  git_ops.py  manager.py  migrate.py  models.py  operator.py  orchestrator.py  planner.py  policy.py  progress.py  reports.py  reviewer.py  router.py  scheduler.py  storage.py  task_graph.py  worker.py
auto_coder/managers/: __init__.py  anthropic.py  base.py  (+2 more)
docs/: AUTONOMOUS_VISION.md  SELF_HEALING_DESIGN.md  architecture.md  baseline-validation.md  brief-validation.md  cc-manager-bridge-spec.md  common-pitfalls.md  cron.md  execution.md  go-live-checklist.md  inputs.md  latest-changes.md  operator-runbook.md  pre-mortem.md  provider-routing.md  pytest-k-validation.md  setup.md  usage.md  yaml-validation.md
example/: PROJECT.md  ROADMAP.md
example-project/: ARCHITECTURE_NOTES.md  CONSTRAINTS.md  PLANNING_HINTS.md  PROJECT.md  README.md  ROADMAP.md
tests/: test_brief_validator.py  test_cc_manager_bridge.py  test_cli.py  test_codex_manager_backend.py  test_config.py  test_execution_modules.py  test_git_ops.py  test_manager.py  test_migrate.py  test_models.py  test_orchestrator.py  test_planner.py  test_progress.py  test_quota_probes.py  test_recovery.py  test_retry_flow.py  test_reviewer.py  test_router.py  test_storage.py  test_task_graph.py  test_task_validation.py  test_work_order_progression.py
(+19 files in other folders)
